# THLS-RoboticChallenge-2026-Nexus

./: LICENSE  README.md
aas/: README.md  __init__.py  semantic_ids.py  serializer.py
aas/builders/: bop_to_aas.py  cdm_to_aas.py  config_to_aas.py  delivery_to_aas.py  layout_to_aas.py  order_to_aas.py  prefab_to_aas.py  trace_to_aas.py  workspace_to_aas.py
aas/examples/: generate_aas_examples.py
aas/shells/: assembly_board_layout_aas.py  assembly_station_aas.py  bill_of_process_aas.py  component_aas.py  execution_trace_aas.py  material_delivery_aas.py  prefab_bop_aas.py  production_order_aas.py  wire_harness_aas.py  workspace_zones_aas.py
aas/submodels/: assembly_board_layout.py  capability_description.py  cdm_topology.py  digital_nameplate.py  execution_trace.py  hierarchical_bom.py  material_delivery.py  prefab_process_parameters.py  process_parameters.py  production_order.py  technical_properties.py  workcell_configuration.py  workspace_zones.py
bill_of_process/: BoPConfig.py  BoPGeneratorService.py  BoPModels.py  README.md  WireRoutingOrderEngine.py
bill_of_process/examples/: generate_bop_examples.py
cable_handling/: README.md  requirements.txt
cable_handling/models/: cable.xml  dual_ur10e_scene.xml  robot_assembly.xml  table_with_connectors.xml
cable_handling/src/: __init__.py  model_loader.py  robot_controller.py  simulation.py
cdm/: README.md  cdm.mermaid
cdm/definitions/: cdm.schema.json  cdm_schema.py  cdm_schema.ts
cdm/examples/: __init__.py  generate_synthetic_harnesses.py
cdm/scripts/: generate_cdm_definitions.py  generate_diagram.sh  package.json  visualize_schema.py
evaluation/extraction/: config.py  export_csv.py  plot_f1_vs_wires.py  plot_metrics.py  run_eval.py
extraction/: README.md  main.py  requirements.txt
layout_generator/: LayoutConfig.py  LayoutGeneratorService.py  LayoutModels.py  README.md  __init__.py  pyproject.toml  requirements-test.txt  requirements.txt
layout_generator/algorithms/: ConnectorPlacementEngine.py  LayoutOptimizer.py  PegPlacementEngine.py  __init__.py
layout_generator/examples/: __init__.py  sample_usage.py
layout_generator/visualizer/: BoardLayoutVisualizer.py  VisualizerStyle.py  __init__.py
simulation/: README.md  __init__.py  requirements.txt
(+87 files in other folders)
